# Copyright (c) 2022 by Apex.AI Inc. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "iceoryx_hoofs",
    srcs = glob([
        "source/**/*.cpp",
        "source/**/*.hpp",
    ]),
    hdrs = glob(["include/**"]),
    linkopts = select({
        "//iceoryx_platform:linux-clang": [
            "-latomic",
            "-lacl",
        ],
        "//iceoryx_platform:linux-gcc": ["-lacl"],
        "//iceoryx_platform:mac": [],
        "//iceoryx_platform:qnx": [],
        "//iceoryx_platform:unix": [],
        "//iceoryx_platform:win": [],
        "//conditions:default": ["-lacl"],
    }),
    strip_include_prefix = "include",
    visibility = ["//visibility:public"],
    deps = ["//iceoryx_platform"],
)

cc_library(
    name = "iceoryx_hoofs_testing",
    srcs = glob(["testing/**/*.cpp"]),
    hdrs = glob(["testing/include/**"]),
    strip_include_prefix = "testing/include",
    visibility = ["//visibility:public"],
    deps = [
        ":iceoryx_hoofs",
        "@googletest//:gtest",
    ],
)
