<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>iceoryx_hoofs</name>
    <version>2.95.2</version>
    <description>Eclipse iceoryx inter-process-communication (IPC) middleware basic building blocks</description>
    <maintainer email="iceoryx-oss-support@apex.ai">Eclipse Foundation, Inc.</maintainer>
    <license>Apache 2.0</license>
    <url type="website">https://iceoryx.io</url>
    <url type="bugtracker">https://github.com/eclipse-iceoryx/iceoryx/issues</url>
    <url type="repository">https://github.com/eclipse-iceoryx/iceoryx</url>

    <buildtool_depend>cmake</buildtool_depend>

    <depend>acl</depend>
    <depend>libatomic</depend>

    <depend>iceoryx_platform</depend>
    <conflict>iceoryx_utils</conflict>
    <replace>iceoryx_utils</replace>

    <doc_depend>doxygen</doc_depend>

    <export>
        <build_type>cmake</build_type>
    </export>
</package>
